--- a/notebooks/01_eda_food_inspections.ipynb
+++ b/notebooks/01_eda_food_inspections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "id": "72341bbd",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "(296215, 17)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "ef5a160b",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4  (41.826518542923324, -87.68420498239537)  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,359 @@
    "id": "9aef7a27",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Missing Values\n",
+    "\n",
+    "count_missing_values = df.isna().sum().sort_values( ascending = False)\n",
+    "count_missing_values\n",
+    "\n",
+    "missing_value_percentage = df.isna().mean().sort_values(ascending = False) * 100 \n",
+    "\n",
+    "missing = pd.DataFrame({\n",
+    "    \"count_missing_values\": count_missing_values,\n",
+    "    \"missing_value_percentage\": missing_value_percentage\n",
+    "})\n",
+    "missing\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "29674c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total duplicate rows: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Duplicates\n",
+    "\n",
+    "df.duplicated().sum()\n",
+    "duplicate_count = int(df.duplicated().sum())\n",
+    "print(f\"Total duplicate rows: {duplicate_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36cfaad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renaming Columns\n",
+    "\n",
+    "df.columns = (\n",
+    "    df.columns.str.lower()\n",
+    "    .str.strip()\n",
+    "    .str.replace(\"#\", \"number\")   # replace # first\n",
+    "    .str.replace(\" \", \"_\")        # then handle spaces\n",
+    "    .str.replace(r\"[^a-z0-9_]\", \"\", regex=True)  # cleanup\n",
+    ")\n",
+    "df.columns\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "7a1d9816",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical columns:\n",
+      "['inspection_id', 'dba_name', 'aka_name', 'license_number', 'facility_type', 'risk', 'address', 'city', 'state', 'zip', 'inspection_date', 'inspection_type', 'results', 'violations', 'location']\n",
+      "\n",
+      "Numerical columns:\n",
+      "['latitude', 'longitude'] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.dtypes\n",
+    "\n",
+    "df[\"license_number\"] = df[\"license_number\"].astype(str)\n",
+    "df[\"zip\"] = df[\"zip\"].astype(str)\n",
+    "df[\"inspection_id\"] = df[\"inspection_id\"].astype(str)\n",
+    "df[\"inspection_date\"] = pd.to_datetime(df[\"inspection_date\"], errors= \"coerce\")\n",
+    "\n",
+    "# Categorical columns (object, string, category)\n",
+    "categorical_cols = df.select_dtypes(include=[\"object\", \"string\", \"category\", \"datetime64[ns]\"]).columns.tolist()\n",
+    "\n",
+    "# Numerical columns (int, float)\n",
+    "numerical_cols = df.select_dtypes(include=[\"int64\", \"float64\", \"Int64\"]).columns.tolist()\n",
+    "\n",
+    "print(\"Categorical columns:\")\n",
+    "print(categorical_cols)\n",
+    "\n",
+    "print(\"\\nNumerical columns:\")\n",
+    "print(numerical_cols, \"\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "a01311cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inspection_id</th>\n",
+       "      <th>dba_name</th>\n",
+       "      <th>aka_name</th>\n",
+       "      <th>license_number</th>\n",
+       "      <th>facility_type</th>\n",
+       "      <th>risk</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>inspection_date</th>\n",
+       "      <th>inspection_type</th>\n",
+       "      <th>results</th>\n",
+       "      <th>violations</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2623075</td>\n",
+       "      <td>HEALTHY WALA TIFFIN / FRIED JUNCTION</td>\n",
+       "      <td>FRIED JUNCTION</td>\n",
+       "      <td>2943658.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>6349 N CLAREMONT AVE</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60659.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Canvass Re-Inspection</td>\n",
+       "      <td>No Entry</td>\n",
+       "      <td>38. INSECTS, RODENTS, &amp; ANIMALS NOT PRESENT - ...</td>\n",
+       "      <td>41.997380</td>\n",
+       "      <td>-87.688504</td>\n",
+       "      <td>(41.99737973336337, -87.68850409776527)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2623084</td>\n",
+       "      <td>KISHA'S KITCHEN</td>\n",
+       "      <td>KISHA'S KITCHEN</td>\n",
+       "      <td>3006551.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>857 W 115TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60643.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Complaint</td>\n",
+       "      <td>Fail</td>\n",
+       "      <td>2. CITY OF CHICAGO FOOD SERVICE SANITATION CER...</td>\n",
+       "      <td>41.684943</td>\n",
+       "      <td>-87.644369</td>\n",
+       "      <td>(41.68494313726917, -87.644368901148)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2623074</td>\n",
+       "      <td>BIG SAMS FOOD MART</td>\n",
+       "      <td>BIG SAMS FOOD MART</td>\n",
+       "      <td>2817600.0</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>133 E 75TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60619.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Complaint</td>\n",
+       "      <td>Pass w/ Conditions</td>\n",
+       "      <td>10. ADEQUATE HANDWASHING SINKS PROPERLY SUPPLI...</td>\n",
+       "      <td>41.758208</td>\n",
+       "      <td>-87.620088</td>\n",
+       "      <td>(41.75820844474927, -87.62008844011588)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2623081</td>\n",
+       "      <td>FOOD TOWN</td>\n",
+       "      <td>FOOD TOWN</td>\n",
+       "      <td>31219.0</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>Risk 2 (Medium)</td>\n",
+       "      <td>935 E 79TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60619.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Canvass Re-Inspection</td>\n",
+       "      <td>Pass</td>\n",
+       "      <td>38. INSECTS, RODENTS, &amp; ANIMALS NOT PRESENT - ...</td>\n",
+       "      <td>41.751218</td>\n",
+       "      <td>-87.601401</td>\n",
+       "      <td>(41.75121793394575, -87.60140141021087)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2623078</td>\n",
+       "      <td>JIMMY JOHNS</td>\n",
+       "      <td>JIMMY JOHNS</td>\n",
+       "      <td>3041206.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>3696 S ARCHER AVE</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60609.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>License</td>\n",
+       "      <td>Pass w/ Conditions</td>\n",
+       "      <td>5. PROCEDURES FOR RESPONDING TO VOMITING AND D...</td>\n",
+       "      <td>41.826519</td>\n",
+       "      <td>-87.684205</td>\n",
+       "      <td>(41.826518542923324, -87.68420498239537)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  inspection_id                              dba_name            aka_name  \\\n",
+       "0       2623075  HEALTHY WALA TIFFIN / FRIED JUNCTION      FRIED JUNCTION   \n",
+       "1       2623084                       KISHA'S KITCHEN     KISHA'S KITCHEN   \n",
+       "2       2623074                    BIG SAMS FOOD MART  BIG SAMS FOOD MART   \n",
+       "3       2623081                             FOOD TOWN           FOOD TOWN   \n",
+       "4       2623078                           JIMMY JOHNS         JIMMY JOHNS   \n",
+       "\n",
+       "  license_number  facility_type             risk               address  \\\n",
+       "0      2943658.0     Restaurant    Risk 1 (High)  6349 N CLAREMONT AVE   \n",
+       "1      3006551.0     Restaurant    Risk 1 (High)        857 W 115TH ST   \n",
+       "2      2817600.0  Grocery Store    Risk 1 (High)         133 E 75TH ST   \n",
+       "3        31219.0  Grocery Store  Risk 2 (Medium)         935 E 79TH ST   \n",
+       "4      3041206.0     Restaurant    Risk 1 (High)     3696 S ARCHER AVE   \n",
+       "\n",
+       "      city state      zip inspection_date        inspection_type  \\\n",
+       "0  CHICAGO    IL  60659.0      2025-08-29  Canvass Re-Inspection   \n",
+       "1  CHICAGO    IL  60643.0      2025-08-29              Complaint   \n",
+       "2  CHICAGO    IL  60619.0      2025-08-29              Complaint   \n",
+       "3  CHICAGO    IL  60619.0      2025-08-29  Canvass Re-Inspection   \n",
+       "4  CHICAGO    IL  60609.0      2025-08-29                License   \n",
+       "\n",
+       "              results                                         violations  \\\n",
+       "0            No Entry  38. INSECTS, RODENTS, & ANIMALS NOT PRESENT - ...   \n",
+       "1                Fail  2. CITY OF CHICAGO FOOD SERVICE SANITATION CER...   \n",
+       "2  Pass w/ Conditions  10. ADEQUATE HANDWASHING SINKS PROPERLY SUPPLI...   \n",
+       "3                Pass  38. INSECTS, RODENTS, & ANIMALS NOT PRESENT - ...   \n",
+       "4  Pass w/ Conditions  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...   \n",
+       "\n",
+       "    latitude  longitude                                  location  \n",
+       "0  41.997380 -87.688504   (41.99737973336337, -87.68850409776527)  \n",
+       "1  41.684943 -87.644369     (41.68494313726917, -87.644368901148)  \n",
+       "2  41.758208 -87.620088   (41.75820844474927, -87.62008844011588)  \n",
+       "3  41.751218 -87.601401   (41.75121793394575, -87.60140141021087)  \n",
+       "4  41.826519 -87.684205  (41.826518542923324, -87.68420498239537)  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25036dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "facility_type\n",
+      "Restaurant                         200211\n",
+      "Grocery Store                       36095\n",
+      "School                              18503\n",
+      "Childrens Services Facility          6939\n",
+      "Bakery                               4259\n",
+      "Daycare Above And Under 2 Years      3939\n",
+      "Daycare (2 - 6 Years)                3190\n",
+      "Long Term Care                       2291\n",
+      "Catering                             1835\n",
+      "Liquor                               1270\n",
+      "Name: count, dtype: int64 \n",
+      "\n",
+      "facility_type\n",
+      "Grocery/Liquor Store                     1\n",
+      "Protein Shake Bar                        1\n",
+      "Pop-Up Food Establishment User-Tier I    1\n",
+      "Gas/Mini Mart                            1\n",
+      "Day Spa                                  1\n",
+      "Mobile Dessert Vendor                    1\n",
+      "Cat/Liquor                               1\n",
+      "Mobile Dessert Cart                      1\n",
+      "Book Store                               1\n",
+      "Car Wash                                 1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Categorical Variable Exploration & Cleaning\n",
+    "\n",
+    "Here we explore categorical columns (facility_type, risk, results)\n",
+    "to identify inconsistent values, typos, and casing issues.\n",
+    "We apply normalization steps such as title-casing and whitespace cleanup\n",
+    "to make categories consistent and ready for analysis.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "df[\"facility_type\"] = df[\"facility_type\"].str.lower().str.title().str.replace(r\"S\\b\", \"'s\", regex = True).str.replace(r\"'\", \"\", regex = True)\n",
+    "print(df[\"facility_type\"].value_counts().head(10), \"\\n\")\n",
+    "print(df[\"facility_type\"].value_counts().tail(10))\n",
+    "#df[\"risk\"].value_counts.head(10)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
