eda: cleaned risk column and grouped results categories

--- a/notebooks/01_eda_food_inspections.ipynb
+++ b/notebooks/01_eda_food_inspections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "72341bbd",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "(296215, 17)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "ef5a160b",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4  (41.826518542923324, -87.68420498239537)  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,10 +230,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9aef7a27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count_missing_values</th>\n",
+       "      <th>missing_value_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Violations</th>\n",
+       "      <td>82449</td>\n",
+       "      <td>27.834175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Facility Type</th>\n",
+       "      <td>5240</td>\n",
+       "      <td>1.768985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AKA Name</th>\n",
+       "      <td>2413</td>\n",
+       "      <td>0.814611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Longitude</th>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.341306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Location</th>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.341306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latitude</th>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.341306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City</th>\n",
+       "      <td>159</td>\n",
+       "      <td>0.053677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Risk</th>\n",
+       "      <td>83</td>\n",
+       "      <td>0.028020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <td>58</td>\n",
+       "      <td>0.019580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zip</th>\n",
+       "      <td>42</td>\n",
+       "      <td>0.014179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>License #</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.006077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inspection Type</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inspection ID</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Address</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DBA Name</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Results</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inspection Date</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 count_missing_values  missing_value_percentage\n",
+       "Violations                      82449                 27.834175\n",
+       "Facility Type                    5240                  1.768985\n",
+       "AKA Name                         2413                  0.814611\n",
+       "Longitude                        1011                  0.341306\n",
+       "Location                         1011                  0.341306\n",
+       "Latitude                         1011                  0.341306\n",
+       "City                              159                  0.053677\n",
+       "Risk                               83                  0.028020\n",
+       "State                              58                  0.019580\n",
+       "Zip                                42                  0.014179\n",
+       "License #                          18                  0.006077\n",
+       "Inspection Type                     1                  0.000338\n",
+       "Inspection ID                       0                  0.000000\n",
+       "Address                             0                  0.000000\n",
+       "DBA Name                            0                  0.000000\n",
+       "Results                             0                  0.000000\n",
+       "Inspection Date                     0                  0.000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Missing Values\n",
     "\n",
@@ -252,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "29674c6e",
    "metadata": {},
    "outputs": [
@@ -274,10 +415,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d36cfaad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['inspection_id', 'dba_name', 'aka_name', 'license_number',\n",
+       "       'facility_type', 'risk', 'address', 'city', 'state', 'zip',\n",
+       "       'inspection_date', 'inspection_type', 'results', 'violations',\n",
+       "       'latitude', 'longitude', 'location'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Renaming Columns\n",
     "\n",
@@ -295,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "7a1d9816",
    "metadata": {},
    "outputs": [
@@ -336,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "id": "a01311cf",
    "metadata": {},
    "outputs": [
@@ -522,7 +678,7 @@
        "4  41.826519 -87.684205  (41.826518542923324, -87.68420498239537)  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "25036dce",
    "metadata": {},
    "outputs": [
@@ -578,14 +734,120 @@
     "We apply normalization steps such as title-casing and whitespace cleanup\n",
     "to make categories consistent and ready for analysis.\n",
     "\"\"\"\n",
+    "# facility_type\n",
     "\n",
-    "\n",
-    "df[\"facility_type\"] = df[\"facility_type\"].str.lower().str.title().str.replace(r\"S\\b\", \"'s\", regex = True).str.replace(r\"'\", \"\", regex = True)\n",
+    "df[\"facility_type\"] = (\n",
+    "    df[\"facility_type\"]\n",
+    "    .str.lower()\n",
+    "    .str.title()\n",
+    "    .str.replace(r\"S\\b\", \"'s\", regex = True)\n",
+    "    .str.replace(r\"'\", \"\", regex = True)\n",
+    ")\n",
     "print(df[\"facility_type\"].value_counts().head(10), \"\\n\")\n",
     "print(df[\"facility_type\"].value_counts().tail(10))\n",
-    "#df[\"risk\"].value_counts.head(10)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "592bdaec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "risk\n",
+       "Risk 1 (High)      219081\n",
+       "Risk 2 (Medium)     53589\n",
+       "Risk 3 (Low)        23387\n",
+       "NaN                    83\n",
+       "<NA>                   75\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# risk\n",
+    "\n",
+    "df[\"risk\"].value_counts()\n",
+    "df[df[\"risk\"] == \"All\"]\n",
+    "\n",
+    "df.loc[df[\"risk\"] == \"All\", \"risk\"] = pd.NA\n",
+    "\n",
+    "df[\"risk\"].value_counts(dropna = False)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "046a224a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results\n",
+      "Pass                  153013\n",
+      "Fail                   57337\n",
+      "Pass w/ Conditions     44413\n",
+      "Out of Business        24578\n",
+      "No Entry               12746\n",
+      "Name: count, dtype: int64 \n",
+      "\n",
+      "results\n",
+      "Pass w/ Conditions      44413\n",
+      "Out of Business         24578\n",
+      "No Entry                12746\n",
+      "Not Ready                4035\n",
+      "Business Not Located       93\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "results_grouped\n",
+       "Pass-related           197426\n",
+       "Fail-related            57337\n",
+       "Other/Not Inspected     41452\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# results\n",
+    "\n",
+    "print(df[\"results\"].value_counts().head(), \"\\n\")\n",
+    "print(df[\"results\"].value_counts().tail())\n",
+    "\n",
+    "results_mapping = {\n",
+    "    \"Pass\": \"Pass-related\",\n",
+    "    \"Pass w/ Conditions\": \"Pass-related\",\n",
+    "    \"Fail\": \"Fail-related\",\n",
+    "    \"Fail w/ Conditions\": \"Fail-related\",\n",
+    "    \"Out of Business\": \"Other/Not Inspected\",\n",
+    "    \"No Entry\": \"Other/Not Inspected\",\n",
+    "    \"Not Ready\": \"Other/Not Inspected\",\n",
+    "    \"Business Not Located\": \"Other/Not Inspected\"\n",
+    "\n",
+    "}\n",
+    "\n",
+    "df[\"results_grouped\"] = df[\"results\"].map(results_mapping)\n",
+    "\n",
+    "df[\"results_grouped\"].value_counts(dropna=False)\n"
    ]
   }
  ],
