Cleaned numerical (lat/lon), state, city, zip; dropped missing coords

--- a/notebooks/01_eda_food_inspections.ipynb
+++ b/notebooks/01_eda_food_inspections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 188,
    "id": "72341bbd",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "(296215, 17)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 189,
    "id": "ef5a160b",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4  (41.826518542923324, -87.68420498239537)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 190,
    "id": "9aef7a27",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "Inspection Date                     0                  0.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 191,
    "id": "29674c6e",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 192,
    "id": "d36cfaad",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 193,
    "id": "7a1d9816",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 194,
    "id": "a01311cf",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "4  41.826519 -87.684205  (41.826518542923324, -87.68420498239537)  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 195,
    "id": "25036dce",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 196,
    "id": "592bdaec",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 197,
    "id": "046a224a",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,6 +848,407 @@
     "df[\"results_grouped\"] = df[\"results\"].map(results_mapping)\n",
     "\n",
     "df[\"results_grouped\"].value_counts(dropna=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "67eb2afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         latitude  longitude\n",
+      "0       41.997380 -87.688504\n",
+      "1       41.684943 -87.644369\n",
+      "2       41.758208 -87.620088\n",
+      "3       41.751218 -87.601401\n",
+      "4       41.826519 -87.684205\n",
+      "...           ...        ...\n",
+      "296210  41.884586 -87.631010\n",
+      "296211  41.898431 -87.628009\n",
+      "296212  41.938443 -87.768318\n",
+      "296213  41.938007 -87.644755\n",
+      "296214        NaN        NaN\n",
+      "\n",
+      "[296215 rows x 2 columns]\n",
+      "            latitude      longitude\n",
+      "count  295204.000000  295204.000000\n",
+      "mean       41.880592     -87.676392\n",
+      "std         0.081087       0.058336\n",
+      "min        41.644670     -87.906874\n",
+      "25%        41.831302     -87.707598\n",
+      "50%        41.891797     -87.666524\n",
+      "75%        41.939753     -87.634955\n",
+      "max        42.021064     -87.525094\n",
+      "Missing coords:  1011\n",
+      "After cleanup: (295204, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numerical Cleanup\n",
+    "\n",
+    "print(df[[\"latitude\", \"longitude\"]])\n",
+    "print(df[[\"latitude\", \"longitude\"]].describe())\n",
+    "\n",
+    "missing_coord = df[df[\"latitude\"].isna() | df[\"longitude\"].isna()]\n",
+    "print(\"Missing coords: \", len(missing_coord))\n",
+    "\n",
+    "df = df.dropna(subset= [\"latitude\", \"longitude\"])\n",
+    "\n",
+    "print(\"After cleanup:\", df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "e18219bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After bounding box filter: (295204, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define Chicago bounding box\n",
+    "\n",
+    "lat_min, lat_max = 41.6, 42.1\n",
+    "lon_min, lon_max = -88.0, -87.5\n",
+    "\n",
+    "df  = df[df[\"latitude\"].between(lat_min, lat_max) & df[\"longitude\"].between(lon_min, lon_max)]\n",
+    "print(\"After bounding box filter:\", df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "042b73c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "IL    295146\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# --- State Cleanup ---\n",
+    "\n",
+    "df[\"state\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "50aa6c52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped 179 rows that weren’t Chicago.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inspection_id</th>\n",
+       "      <th>dba_name</th>\n",
+       "      <th>aka_name</th>\n",
+       "      <th>license_number</th>\n",
+       "      <th>facility_type</th>\n",
+       "      <th>risk</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>inspection_date</th>\n",
+       "      <th>inspection_type</th>\n",
+       "      <th>results</th>\n",
+       "      <th>violations</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>location</th>\n",
+       "      <th>results_grouped</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2623075</td>\n",
+       "      <td>HEALTHY WALA TIFFIN / FRIED JUNCTION</td>\n",
+       "      <td>FRIED JUNCTION</td>\n",
+       "      <td>2943658.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>6349 N CLAREMONT AVE</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60659.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Canvass Re-Inspection</td>\n",
+       "      <td>No Entry</td>\n",
+       "      <td>38. INSECTS, RODENTS, &amp; ANIMALS NOT PRESENT - ...</td>\n",
+       "      <td>41.997380</td>\n",
+       "      <td>-87.688504</td>\n",
+       "      <td>(41.99737973336337, -87.68850409776527)</td>\n",
+       "      <td>Other/Not Inspected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2623084</td>\n",
+       "      <td>KISHA'S KITCHEN</td>\n",
+       "      <td>KISHA'S KITCHEN</td>\n",
+       "      <td>3006551.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>857 W 115TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60643.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Complaint</td>\n",
+       "      <td>Fail</td>\n",
+       "      <td>2. CITY OF CHICAGO FOOD SERVICE SANITATION CER...</td>\n",
+       "      <td>41.684943</td>\n",
+       "      <td>-87.644369</td>\n",
+       "      <td>(41.68494313726917, -87.644368901148)</td>\n",
+       "      <td>Fail-related</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2623074</td>\n",
+       "      <td>BIG SAMS FOOD MART</td>\n",
+       "      <td>BIG SAMS FOOD MART</td>\n",
+       "      <td>2817600.0</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>133 E 75TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60619.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Complaint</td>\n",
+       "      <td>Pass w/ Conditions</td>\n",
+       "      <td>10. ADEQUATE HANDWASHING SINKS PROPERLY SUPPLI...</td>\n",
+       "      <td>41.758208</td>\n",
+       "      <td>-87.620088</td>\n",
+       "      <td>(41.75820844474927, -87.62008844011588)</td>\n",
+       "      <td>Pass-related</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2623081</td>\n",
+       "      <td>FOOD TOWN</td>\n",
+       "      <td>FOOD TOWN</td>\n",
+       "      <td>31219.0</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>Risk 2 (Medium)</td>\n",
+       "      <td>935 E 79TH ST</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60619.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>Canvass Re-Inspection</td>\n",
+       "      <td>Pass</td>\n",
+       "      <td>38. INSECTS, RODENTS, &amp; ANIMALS NOT PRESENT - ...</td>\n",
+       "      <td>41.751218</td>\n",
+       "      <td>-87.601401</td>\n",
+       "      <td>(41.75121793394575, -87.60140141021087)</td>\n",
+       "      <td>Pass-related</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2623078</td>\n",
+       "      <td>JIMMY JOHNS</td>\n",
+       "      <td>JIMMY JOHNS</td>\n",
+       "      <td>3041206.0</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>Risk 1 (High)</td>\n",
+       "      <td>3696 S ARCHER AVE</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60609.0</td>\n",
+       "      <td>2025-08-29</td>\n",
+       "      <td>License</td>\n",
+       "      <td>Pass w/ Conditions</td>\n",
+       "      <td>5. PROCEDURES FOR RESPONDING TO VOMITING AND D...</td>\n",
+       "      <td>41.826519</td>\n",
+       "      <td>-87.684205</td>\n",
+       "      <td>(41.826518542923324, -87.68420498239537)</td>\n",
+       "      <td>Pass-related</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  inspection_id                              dba_name            aka_name  \\\n",
+       "0       2623075  HEALTHY WALA TIFFIN / FRIED JUNCTION      FRIED JUNCTION   \n",
+       "1       2623084                       KISHA'S KITCHEN     KISHA'S KITCHEN   \n",
+       "2       2623074                    BIG SAMS FOOD MART  BIG SAMS FOOD MART   \n",
+       "3       2623081                             FOOD TOWN           FOOD TOWN   \n",
+       "4       2623078                           JIMMY JOHNS         JIMMY JOHNS   \n",
+       "\n",
+       "  license_number  facility_type             risk               address  \\\n",
+       "0      2943658.0     Restaurant    Risk 1 (High)  6349 N CLAREMONT AVE   \n",
+       "1      3006551.0     Restaurant    Risk 1 (High)        857 W 115TH ST   \n",
+       "2      2817600.0  Grocery Store    Risk 1 (High)         133 E 75TH ST   \n",
+       "3        31219.0  Grocery Store  Risk 2 (Medium)         935 E 79TH ST   \n",
+       "4      3041206.0     Restaurant    Risk 1 (High)     3696 S ARCHER AVE   \n",
+       "\n",
+       "      city state      zip inspection_date        inspection_type  \\\n",
+       "0  CHICAGO    IL  60659.0      2025-08-29  Canvass Re-Inspection   \n",
+       "1  CHICAGO    IL  60643.0      2025-08-29              Complaint   \n",
+       "2  CHICAGO    IL  60619.0      2025-08-29              Complaint   \n",
+       "3  CHICAGO    IL  60619.0      2025-08-29  Canvass Re-Inspection   \n",
+       "4  CHICAGO    IL  60609.0      2025-08-29                License   \n",
+       "\n",
+       "              results                                         violations  \\\n",
+       "0            No Entry  38. INSECTS, RODENTS, & ANIMALS NOT PRESENT - ...   \n",
+       "1                Fail  2. CITY OF CHICAGO FOOD SERVICE SANITATION CER...   \n",
+       "2  Pass w/ Conditions  10. ADEQUATE HANDWASHING SINKS PROPERLY SUPPLI...   \n",
+       "3                Pass  38. INSECTS, RODENTS, & ANIMALS NOT PRESENT - ...   \n",
+       "4  Pass w/ Conditions  5. PROCEDURES FOR RESPONDING TO VOMITING AND D...   \n",
+       "\n",
+       "    latitude  longitude                                  location  \\\n",
+       "0  41.997380 -87.688504   (41.99737973336337, -87.68850409776527)   \n",
+       "1  41.684943 -87.644369     (41.68494313726917, -87.644368901148)   \n",
+       "2  41.758208 -87.620088   (41.75820844474927, -87.62008844011588)   \n",
+       "3  41.751218 -87.601401   (41.75121793394575, -87.60140141021087)   \n",
+       "4  41.826519 -87.684205  (41.826518542923324, -87.68420498239537)   \n",
+       "\n",
+       "       results_grouped  \n",
+       "0  Other/Not Inspected  \n",
+       "1         Fail-related  \n",
+       "2         Pass-related  \n",
+       "3         Pass-related  \n",
+       "4         Pass-related  "
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# --- City Cleanup ---\n",
+    "\n",
+    "# Normalize to uppercase so we don't get 'Chicago', 'CHICAGO', 'chicago' separately\n",
+    "df[\"city\"] = df[\"city\"].str.upper()\n",
+    "\n",
+    "# Quick look at counts\n",
+    "df[\"city\"].value_counts().head(15)\n",
+    "\n",
+    "# Map obvious typos back to CHICAGO\n",
+    "city_dict = {\n",
+    "    \"CCHICAGO\": \"CHICAGO\",\n",
+    "    \"CHICAGOCHICAGO\": \"CHICAGO\",\n",
+    "    \"CHICAGOO\": \"CHICAGO\",\n",
+    "    \"CHICAGO.\": \"CHICAGO\",\n",
+    "    \"CHCHICAGO\": \"CHICAGO\",\n",
+    "    \"312CHICAGO\": \"CHICAGO\",\n",
+    "    \"CHICAGOI\": \"CHICAGO\",\n",
+    "    \"CHCICAGO\": \"CHICAGO\",\n",
+    "    \"CHICAGOC\": \"CHICAGO\"\n",
+    "}\n",
+    "df[\"city\"] = df[\"city\"].replace(city_dict)\n",
+    "\n",
+    "# Keep only Chicago rows (dropping suburbs + weird values)\n",
+    "before = df.shape[0]\n",
+    "df = df[df[\"city\"] == \"CHICAGO\"]\n",
+    "after = df.shape[0]\n",
+    "\n",
+    "print(f\"Dropped {before - after} rows that weren’t Chicago.\")\n",
+    "df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "64fbc6cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zip\n",
+      "60649     3467\n",
+      "60651     4326\n",
+      "60652     2611\n",
+      "60653     2524\n",
+      "60654     6562\n",
+      "60655     1299\n",
+      "60656     1171\n",
+      "60657    10082\n",
+      "60659     6213\n",
+      "60660     4426\n",
+      "60661     3829\n",
+      "60666     3702\n",
+      "60706        3\n",
+      "60707     1716\n",
+      "60827      212\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- ZIP Cleanup ---\n",
+    "\n",
+    "# Convert to string, drop decimals (e.g. 60610.0 → 60610)\n",
+    "df[\"zip\"] = df[\"zip\"].astype(str).str.split(\".\", n=1, expand=True)[0]\n",
+    "\n",
+    "# Check lengths (expect mostly 5 digits)\n",
+    "df[\"zip\"].str.len().value_counts()\n",
+    "\n",
+    "# Keep only 5-digit ZIPs\n",
+    "df = df[df[\"zip\"].str.len() == 5]\n",
+    "\n",
+    "# Keep only Chicago ZIPs\n",
+    "df = df[df[\"zip\"].astype(int).between(60601, 60827)]\n",
+    "\n",
+    "# ZIPs by count\n",
+    "print(df[\"zip\"].value_counts().sort_index().tail(15))\n",
+    "\n",
+    "\n"
    ]
   }
  ],
