Completed data cleaning and saved processed dataset

--- a/notebooks/01_eda_food_inspections.ipynb
+++ b/notebooks/01_eda_food_inspections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "72341bbd",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "id": "9aef7a27",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "id": "29674c6e",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "d36cfaad",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "7a1d9816",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "25036dce",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "id": "592bdaec",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "id": "046a224a",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "67eb2afc",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "id": "e18219bd",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "id": "042b73c8",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "id": "50aa6c52",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "4         Pass-related  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "64fbc6cb",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "id": "b814afd4",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "id": "28fc2b82",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
        "4         Pass-related  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "id": "32ae8faa",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
        "4  41.826519 -87.684205         Pass-related  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "id": "a7733798",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "id": "f87eb9e2",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "4  41.826519 -87.684205         Pass-related  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "id": "1febf736",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "id": "33d20081",
    "metadata": {},
    "outputs": [
@@ -1644,7 +1644,7 @@
        "5         Fail-related  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,6 +1652,110 @@
    "source": [
     "df.columns.str.strip()\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b24cb47c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final shape: (239371, 17)\n",
+      "Unique inspection IDs: 239371\n",
+      "Duplicate rows: 0\n",
+      "inspection_id              object\n",
+      "dba_name                   object\n",
+      "aka_name                   object\n",
+      "license_number             object\n",
+      "facility_type              object\n",
+      "risk                       object\n",
+      "address                    object\n",
+      "city                       object\n",
+      "state                      object\n",
+      "zip                        object\n",
+      "inspection_date    datetime64[ns]\n",
+      "inspection_type            object\n",
+      "results                    object\n",
+      "violations                 object\n",
+      "latitude                  float64\n",
+      "longitude                 float64\n",
+      "results_grouped            object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Final Sanity Checks ---\n",
+    "\n",
+    "# Check final shape\n",
+    "print(\"Final shape:\", df.shape)\n",
+    "\n",
+    "# Confirm inspection_id uniqueness\n",
+    "print(\"Unique inspection IDs:\", df[\"inspection_id\"].nunique())\n",
+    "\n",
+    "# Double-check duplicates\n",
+    "print(\"Duplicate rows:\", df.duplicated().sum())\n",
+    "\n",
+    "# Confirm column data types\n",
+    "print(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "754a3f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved to: ../data/processed/food_inspections_clean.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Save Cleaned Data ---\n",
+    "\n",
+    "# Define processed data path and save cleaned dataset\n",
+    "PROCESSED_PATH = \"../data/processed/food_inspections_clean.csv\"\n",
+    "df.to_csv(PROCESSED_PATH, index=False)\n",
+    "\n",
+    "print(\"Cleaned dataset saved to:\", PROCESSED_PATH)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dbb4a00",
+   "metadata": {},
+   "source": [
+    "# ✅ Data Cleaning Summary\n",
+    "\n",
+    "I started with the raw **Chicago Food Inspections** dataset and worked through each column to make it consistent and usable.  \n",
+    "\n",
+    "Here’s what was done:  \n",
+    "\n",
+    "- Renamed columns to snake_case for consistency.  \n",
+    "- Cleaned categorical columns:  \n",
+    "  - `facility_type` normalized to a standard format.  \n",
+    "  - Removed invalid values in `risk`.  \n",
+    "  - Grouped `results` into Pass-related, Fail-related, and Other/Not Inspected.  \n",
+    "- Cleaned latitude/longitude, dropped missing values, and kept only rows inside Chicago’s bounding box.  \n",
+    "- Standardized state, city, and ZIP codes. Removed non-Chicago rows.  \n",
+    "- Fixed address spacing issues.  \n",
+    "- Converted `inspection_date` to datetime, checked ranges (2010–2025), no missing dates.  \n",
+    "- Cleaned `license_number`, removed decimal artifacts, and kept only valid 7-digit licenses.  \n",
+    "- Ran final checks: no duplicates, correct data types, unique inspection IDs.  \n",
+    "\n",
+    "### Final dataset\n",
+    "- Shape: 239,371 rows × 17 columns  \n",
+    "- Saved to: `../data/processed/food_inspections_clean.csv`  \n",
+    "\n",
+    "The data is now ready for analysis.\n"
    ]
   }
  ],
