Updated cleaning summary (removed tick emoji)

--- a/notebooks/01_eda_food_inspections.ipynb
+++ b/notebooks/01_eda_food_inspections.ipynb
@@ -1733,7 +1733,7 @@
    "id": "7dbb4a00",
    "metadata": {},
    "source": [
-    "# ✅ Data Cleaning Summary\n",
+    "# Data Cleaning Summary ✔\n",
     "\n",
     "I started with the raw **Chicago Food Inspections** dataset and worked through each column to make it consistent and usable.  \n",
     "\n",
